--- a/admin/package.json
+++ b/admin/package.json
@@ -14,10 +14,12 @@
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "notistack": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
