--- a/admin/package.json
+++ b/admin/package.json
@@ -17,7 +17,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
+    "react-image-file-resizer": "^0.4.4",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
