--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.4",
     "react-moment": "^1.1.1",
