--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "aos": "^2.3.4",
         "axios": "^0.21.4",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.1",
