--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.8",
+    "mongoose": "^6.0.8"
+  },
+  "devDependencies": {
     "morgan": "^1.10.0"
   }
 }
