--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,8 @@
         "react-moment": "^1.1.1",
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.3.0",
-        "react-router-hash-link": "^2.4.3",
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
-        "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
         "uuid": "^8.3.2"
     },
@@ -46,5 +44,8 @@
             "not dead",
             "not op_mini all"
         ]
+    },
+    "devDependencies": {
+        "redux-devtools-extension": "^2.13.9"
     }
 }
