--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "VeNoM",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
@@ -18,6 +19,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-rate-limit": "^5.5.0",
     "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8"
